--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,3 +16,11 @@ bind-key -n M-S-Down   resize-pane -D 5
 bind-key -n M-z resize-pane -Z
 set -g mode-keys vi
 set -g escape-time 10
+
+set -g status-style bg=default
+
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/sensible'
+
+run '~/.tmux/plugins/tpm/tpm'
+
