--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -4,7 +4,7 @@ live_config_reload = true
 size = 10.0
 
 [font.normal]
-family = "JetBrains Mono Nerd Font"
+family = "JetBrainsMono Nerd Font"
 
 [[keyboard.bindings]]
 action = "IncreaseFontSize"
