--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -1,4 +1,3 @@
-live_config_reload = true
 
 [font]
 size = 10.0
@@ -18,3 +17,6 @@ mods = "Alt"
 
 [window]
 opacity = 0.8
+
+[general]
+live_config_reload = true
